<resources>
    <string name="app_name">SW_Project</string>
    <!-- fullphoto -->
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="photo">Photo</string>

    <!-- album cover -->
    <string name="album_cover">Album Cover</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="signin">로그인</string>
    <string name="sign_in_google">구글로 로그인</string>

    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="start_title">방 목록</string>
    <string name="roommake">방 생성하기</string>
    <string name="roomenter">방 입장하기</string>
    <string name="roomname">방 이름</string>
    <string name="roomcode">입장 코드</string>


    <!-- Sign Up -->
    <string name="signup_activity_name">사용자 정보 입력</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="pickdate">날짜 선택</string>

    <!-- fragment -->
    <string name="create_board_page_name">새 게시물 등록</string>
    <string name="add_content">내용을 입력하세요</string>
    <string name="post">등록하기</string>
    <string name="back">뒤로가기</string>
    <string name="add_image">이미지 추가</string>
    <string name="change_image">이미지 변경</string>
    <string name="remove_image">이미지 제거</string>
    <string name="tab_board">게시판</string>

    <string name="tab_album">앨범</string>
    <string name="tab_photo">사진</string>
    <string name="create_album_page_name">새 앨범 생성</string>
    <string name="create_album">앨범 생성하기</string>
    <string name="name_album">앨범 이름</string>


    <string name="tab_schedule">일정</string>
    <string name="tab_profile">프로필</string>

    <!--  개인 프로필/설정  -->
    <string name="setting">설정</string>
    <string name="profile_image_set">프로필 이미지 변경</string>
    <string name="profile_image_set_sub">현재 방에서 사용하는 프로필 이미지를 변경합니다.</string>
    <string name="personal_set">개인 설정</string>
    <string name="personal_set_sub">사용자 이름과 생년월일이 참여중인 모든 방에서 변경됩니다.</string>
    <string name="board_set">게시물 수정</string>
    <string name="board_set_sub">내가 올린 게시물을 수정합니다.</string>
    <string name="board_notif_set">새 게시물 알림</string>
    <string name="board_notif_set_sub">새 게시물이 올라오면 알림이 울립니다.</string>
    <string name="schedule_notif_set">일정 알림</string>
    <string name="schedule_notif_set_sub">일정이 있으면 한 시간 전에 알림이 울립니다.</string>
    <string name="signout">로그아웃</string>
    <string name="exit_room">방 나가기</string>
    <string name="change_profile">프로필 변경</string>
    <string name="remove_profile">프리필 제거</string>
    <string name="change">변경하기</string>
    <string name="modify">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="room_code">방 입장 코드</string>
    <string name="show_room_code">방 입장 코드 보기</string>
    <string name="show_room_code_sub">현재 참여중인 방의 입장 코드를 확인합니다.</string>
    <string name="copy_room_code">입장 코드 복사</string>
    <string name="no_board_data">작성한 게시물이 없습니다.</string>


</resources>