<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_box"
        android:text="@string/signup_activity_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp">
    </TextView>
    <LinearLayout
        android:id="@+id/signup_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_pwd_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_account_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/birth"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp">
            </TextView>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_account_birth"
                android:hint="@string/pickdate"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:focusable="false"
                android:cursorVisible="false"
                android:clickable="false">
            </com.google.android.material.textfield.TextInputEditText>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/date_picker_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/calender">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:text="@string/signup"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/lightgrey"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                app:rippleColor="@color/grey"
                android:textColor="@color/black">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_signup_button"
                android:text="@string/cancel"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightgrey"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                app:rippleColor="@color/grey"
                android:textColor="@color/black">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>