<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/roommake"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Roomname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/roomname"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Roomcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/roomcode"/>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelbutton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgrey"
                app:strokeWidth="1dp"
                app:strokeColor="@color/grey"
                app:rippleColor="@color/grey"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkbutton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/check"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgrey"
                app:strokeWidth="1dp"
                app:strokeColor="@color/grey"
                app:rippleColor="@color/grey"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>