<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.PersonalSettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/toolbar_shadow"
        app:title="@string/personal_set"/>

    <LinearLayout
        android:id="@+id/change_personal_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_name_textfield"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/birth"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_birth_textfield"
                android:hint="@string/pickdate"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:focusable="false"
                android:cursorVisible="false"
                android:clickable="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/calender"
                app:backgroundTint="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_personal_info_container"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/lightgrey"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp"
            app:rippleColor="@color/grey"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_button"
            android:text="@string/check"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightgrey"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp"
            app:rippleColor="@color/grey"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>