<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.ModifyBoardActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/toolbar_shadow"
        app:title="@string/board_set"/>

    <LinearLayout
        android:id="@+id/image_actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">  <!-- Initially hidden -->

        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/lightgrey"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                app:rippleColor="@color/grey"
                android:text="@string/change_image"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/lightgrey"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                app:rippleColor="@color/grey"
                android:text="@string/remove_image"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:src="@drawable/add"
            app:backgroundTint="@android:color/white"
            app:rippleColor="@color/grey"
            app:elevation="6dp"
            app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/toolbar"
        android:hint="@string/add_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/lightgrey"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp"
        app:rippleColor="@color/grey"
        android:text="@string/modify"
        android:textColor="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/lightgrey"
        app:strokeColor="@color/grey"
        app:strokeWidth="1dp"
        app:rippleColor="@color/grey"
        android:text="@string/delete"
        android:textColor="@color/black"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>